test html duusaagueno

--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,13 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="./style2.css">
+<link rel="stylesheet" href="./intro.css">
+
    <title>Day</title>
 </head>
 <body>
+   <div class="container"></div>
+   <div class="main">
    <header id="header">
       <a href="" class="logo">Day</a>
       <ul>
@@ -22,11 +26,11 @@
       <img src="./bird1.png" id="bird1" alt="">
       <img src="./bird2.png" id="bird2" alt="">
       <img src="./forest.png" id="forest" alt="">
-      <a href=".sec" id="btn">Explore</a>
+      <a href="#sec" id="btn">Explore</a>
       <img src="./rocks.png" alt="" id="rocks">
       <img src="./water.png" alt="" id="water">
    </section id="sels">
-   <div class="sec">
+   <div class="sec" id="sec">
       <h2>Parallax scrolling effects</h2>
       <p>Өглөөг яаж эхлүүлэх нь тэр өдөр ямар байхыг шийддэг. Өглөө босоод тухайн өдрөө төлөвлөх хэрэгтэй учир нь тэр өдөр төлөвлөлтгүй бол хайран болж өнгөрнө.
          Өглөө босоод их ус уух хэрэгтэй түүнчлэн өглөөний цайгаа зайлшгүй уух ёстой. Бид шөнө унтахдаа шингэн болон тамираа алдсан байдаг учир хоол цай ус ууснаар түүнийгээ нөхнө.
@@ -34,6 +38,7 @@
          компьютер аа харах нь зүйтэй учир нь таны утсан дээрх сайн муу мэдээ таны өглөөний эрч хүч дүүрэн энергийг унагааж болно.</p>
 
    </div>
+</div>
    <audio  autoplay >
       <source src="./day.mp3" type="audio/mpeg">
    </audio>
