--- a/test.html
+++ b/test.html
@@ -4,13 +4,15 @@
     <link rel="stylesheet" href="./test.css">
   </head>
   <body>
+    <div class="landing">
     <div class="clouds">
       <img class="cloud cloudOne" src="./cloud real.png" alt="">
-      <div class="circle">tsagaan sar</div>
-      <img class="cloud cloudTwo" id="flip" src="./cloud real2.png" alt="">
+      <div class="circle"><img src="./vecteezy_water-rabbit-in-chinese-new-year_13120051 (1).png" alt=""></div>
+      <img class="cloud cloudTwo" src="./cloud real2.png" alt="">
       </div>
       <div class="cloudsSecond">
         <img class="cloud cloudOne" src="./cloud real2.png" alt="">
-        <img class="cloud cloudTwo" id="flip" src="./cloud real.png" alt="">
+        <img class="cloud cloudTwo" src="./cloud real.png" alt="">
       </div>
+    </div>
   </bodys
