--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,7 @@
       <img src="./water.png" alt="" id="water">
    </section id="sels">
    <div class="sec" id="sec">
-      <h2>Parallax scrolling effects</h2>
+      <h2>Good Day</h2>
       <p>Өглөөг яаж эхлүүлэх нь тэр өдөр ямар байхыг шийддэг. Өглөө босоод тухайн өдрөө төлөвлөх хэрэгтэй учир нь тэр өдөр төлөвлөлтгүй бол хайран болж өнгөрнө.
          Өглөө босоод их ус уух хэрэгтэй түүнчлэн өглөөний цайгаа зайлшгүй уух ёстой. Бид шөнө унтахдаа шингэн болон тамираа алдсан байдаг учир хоол цай ус ууснаар түүнийгээ нөхнө.
          Мөн өглөө банана болон шууд хүнд хоол идэж болохгүй. Яагаад гэвэл банана нь хоол шингээхэд тусалдаг учир өлөн байхдаа ходоодоо хоосон ажлуулна.Нэмж хэлхэд өглөө босоод дасгал хийх нь тэр өдрөө эрч хүчтэй эхлүүлхэд туслана. Та өглөө боссоноос хойш ядаж 1 цагийн дараа утас 
