--- a/index2.html
+++ b/index2.html
@@ -24,11 +24,11 @@
       </div>
    <div class="main">
    <header id="header">
-      <a href="" class="logo">Day</a>
+      <a href="" class="logo">Цагаан сар</a>
       <ul>
-         <li><a href="./index2.html" class="active">Day</a></li>
-         <li><a href="./index.html">Night</a></li>
-         <li><a href="./about.html">About</a></li>
+         <li><a href="./index2.html" class="active">Үзэсгэлэнт болгогч хэмээх Харагчин туулай жил</a></li>
+         <!-- <li><a href="./index.html">Night</a></li>
+         <li><a href="./about.html">About</a></li> -->
       </ul>
    </header>
    <section>
