--- a/index.html
+++ b/index.html
@@ -1,65 +1,199 @@
-
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="./style.css">
-      <title>Document</title>
-      <link rel="shortout icon" type="image/x-icon" href="https://toppng.com/uploads/preview/free-download-cat-png-vector-icon-cat-transparent-background-cat-icon-transparent-background-11563035549ypnlilorb5.png">
-   </head>
-   <body>
+<head>
+   <link rel="shortout icon" type="image/x-icon" href="https://toppng.com/uploads/preview/free-download-cat-png-vector-icon-cat-transparent-background-cat-icon-transparent-background-11563035549ypnlilorb5.png">
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" media="screen and (min-width: 768px)" href="./style-desktop.css">
+<link rel="stylesheet" media="screen and (max-width: 767px)" href="./style-mobile.css">
 
-   <audio  autoplay >
-      <source src="./nigth.mp3" type="audio/mpeg">
-   </audio>
-   <header>
-      <a href="" class="logo">Nigth</a>
-      <ul>
-         <li><a href="./index2.html">Day</a></li>
-         <li><a href="./index.html">Night</a></li>
-         <li><a href="./about.html">About</a></li>
-      </ul>
+   <title>Day</title>
+</head>
+<body style=" overflow-x: hidden;">
+   <div class="landing">
+      <div class="clouds">
+        <img class="cloud cloudOne" src="./cloud real.png" alt="">
+        <div class="circle"><img src="./vecteezy_water-rabbit-in-chinese-new-year_13120051 (1).png" data-src="././vecteezy_water-rabbit-in-chinese-new-year_13120051 (1).png" alt=""></div>
+        <img class="cloud cloudTwo" src="./cloud real2.png" alt="">
+        </div>
+        <div class="cloudsSecond">
+          <img class="cloud cloudOne" src="./cloud real2.png" alt="">
+          <img class="cloud cloudTwo" src="./cloud real.png" alt="">
+        </div>
+      </div>
+   <div class="main">
+   <header id="header">
+      <h1 class="logo">Жанчивийн найман хүүхэд</h1>
    </header>
-   <section>
-      <img src="./star.png" id="stars" alt="">
-      <img src="./moon.png" id="moon" alt="">
-      <img src="./uul.png" id="uul" alt="">
-      <h2 id="text">Night</h2>
-      <a href="#sec" id="btn">Explore</a>
-      <img src="./had.png" alt="" class="had">
-   </section>
-   <div class="sec" id="sec">
-      <h2>Шөний амьдрал илүү адармаатай</h2>
-      <p>
-         Орой хүнд хоол идэж болохгүй бөгөөд хүнд хоол нь илчлэг болон тослог өндөртэй хоол юм. Өглөө алим идэж болох ч орой идэж болохгүй учир нь алим нь шингэхэд уддаг учир идэж болохгүй. Орой унтхын өмнө дасгал хийх тохиромжгүй бөгөөд таны нойрыг байхгүй болгодог. Орой унтахдаа сүү уувал сайн бөгөөд таныг тайвшируулж сайн амраадаг. Нэмж хэлхэд орой утсаа ухаж болохгүй яагаад гэвэл утсаа удаан харснаар утас болон цахилгаан төхөөрөмжийн ялгаруулдаг цэнхэр гэрэл таны нойрыг арилгадаг. Эцэст нь хэлхэд та эрт унтаж байх шаардлагатай ялангуяа өсвөр насны хүүхдүүд эрт унтаснаар бие физиологийн хувьд өсөж том болно.
-      </p>
-   </div>
+   <div id="btns" class="buttons">
+      <button class="dropdown-btn">Удам судар, ахан дүүсээ мэдэж байхын ач холбогдол <span class="arrow"></span></button>
+      <div class="dropdown-container">
+         <p>Монголчууд &quot;Ураг урагтаа хүндтэй, ургаа мод газартаа хүндтэй&quot;-н учир хусавч үл арилах ясан төрөл, шахавч үл ширгэх цусан төрлөө мэдэхийг үр хүүхдэдээ хичээнгүйлэн захидаг нь үр удмаа эрүүл ариун байлгах шаардлагын зэрэгцээ, төрөл садан ахан дүүсээ сайн мэдэж хүндэтгэн, дотносох, бие биенээ тэтгэн тусалж байх амьдралын хэрэгцээтэй холбоотой юм. Эцгийн талыг ясан төрөл, эхийн талыг цусан (юм уу махан) төрөл гэж үздэг бөгөөд өөрөөсөө өмнөх, хойтох долоон үеийг үр хүүхдэдээ сайн мэдүүлж, нэрлэж сургадаг.&nbsp;</p>
+<p>Тухайлбал:&nbsp;</p>
+<p>Дээд үе:</p>
+<ul>
+    <li>
+        <p>Аав - Өөрийн аав</p>
+    </li>
+    <li>
+        <p>Өвөг эцэг - Аавын аав</p>
+    </li>
    
+    <li>
+        <p>Өндөр өвөг - Өвөг эцгийн аав</p>
+    </li>
+    <li>
+        <p>Элэнц - Өндөр өвгийн аав</p>
+    </li>
+    <li>
+        <p>Элэнц өвөг - Элэнцийн аав</p>
+    </li>
+    <li>
+        <p>Хуланц - Элэнц өвгийн аав</p>
+    </li>
+</ul>
+<p>Ийнхүү өөрөөсөө дээшхи 7 үеийг өндөр өвгийн үе гэх ба харин өөрөөсөө доошхи 7 үеийг доошхи үе гэнэ. &nbsp;&nbsp;</p>
+<p>Доод /жих/ үе:</p>
+<ul>
+    <li>
+        <p>Та өөрөө</p>
+    </li>
+    <li>
+        <p>Хүү/охин өөрийн хүүхэд&nbsp;</p>
+    </li>
+    <li>
+        <p>Ач хүү/Зээ хүү (охин) &ndash; хүүгийн (охины) хүүхэд</p>
+    </li>
+    <li>
+        <p>Гуч &ndash;ач, зээгийн хүүхэд</p>
+    </li>
+    <li>
+        <p>Жич &ndash; Гучийн хүүхэд</p>
+    </li>
+    <li>
+        <p>Ачанцар &ndash; жичийн хүүхдүүд&nbsp;</p>
+    </li>
+    <li>
+        <p>Гучанцар &ndash; ачанцарын хүүхдүүд (жихуй, жилийх, талийх) эдгээр болно.&nbsp;</p>
+    </li>
+</ul>
+<p>Дээд доод үеийн хооронд багтах ураг төрөл хамаатан садны эш нэрийг толилуулъя.</p>
+<ul>
+    <li>
+        <p>Авга (их, бага) &ndash; эцгийн ах (эгч) нь их авга, дүү нь бага авга</p>
+    </li>
+    <li>
+        <p>Нагац &ndash; эхийн ах, эгч дүүс (их, бага)</p>
+    </li>
+    <li>
+        <p>Худ (худгуй)- бэр буулгалцсан эцэг эх</p>
+    </li>
+    <li>
+        <p>Бэр &ndash; хүүгийн эхнэр&nbsp;</p>
+    </li>
+    <li>
+        <p>Баз &ndash; эгч дүүсийн нөхөр</p>
+    </li>
+    <li>
+        <p>Бэргэн &ndash; ахын эхнэр</ps
+    </li>
+    <li>
+        <p>Хүргэн ах &ndash; эгч, охин дүүгийн нөхөр</p>
+    </li>
+    <li>
+        <p>Үеэл (ах дүү) &ndash; ах дүүсийн хүүхэд</p>
+    </li>
+    <li>
+        <p>Хаяал &ndash; ах дүү үеэлийн хүүхдүүд</p>
+    </li>
+    <li>
+        <p>Бүл &ndash; эгч болон бүсгүй дүүгийн хүүхэд</p>
+    </li>
+    <li>
+        <p>Бүлэнцэр &ndash; бүлийн хүүхдүүд&nbsp;</p>
+    </li>
+</ul>
+      </div>
 
+      <button class="dropdown-btn">Жанчив гэж хэн бэ? <span class="arrow"></span></button>
+      <div class="dropdown-container">
+         <p>Манай овог Донровын Мондгой гэх хошуу нутагтаа шударга, өөртөө итгэл үнэмшилтэй, бусдад үлгэр дууриалалтай, хэсэг бүлэг хүмүүсийг удирдан зохион байгуулж, манлайлан жолооддог хүн байжээ. Мондгойн аавыг Донров гэдэг. Донровын аавыг Цэдэнбалжир гэдэг байжээ.&nbsp;</p>
+<p>Мондгой болон Мядагбал нарын дундаас төрсөн ууган хүү Жанчив нь бидний өндөр өвөг билээ. Тэрээр Завхан аймгийн Завханмандал сумд 1904 онд төрсөн бөгөөд Дөрвөлжин сумын Цогт баг, Завхан голын хөвөөнд төрж өссөн Жамбын Хандхүүтэй гэр бүл болон 4 хүү, 4 охин төрүүлэн өсгөсөн юм.&nbsp;</p>
+<p>Жанчив өвөг эцэг нь ах дүү, авга нагац нарынхаа дотроос архи, тамхи хэрэглэдэггүй цорын ганц хүн байжээ. Харин бидний эмэг эх Хандхүү нь нутагтаа сайн бэр гэх алдрыг хүртсэн ааш зан сайтай, ажилсаг нэгэн байжээ.</p>
+<p>Хүн эцгээсээ дээш гурван үеэ мэдэж явбаас тэнгэртэй</p>
+<p>Эхээс дээг гурван үеэ мэдэж явбаас заяатай</p>
+      </div>
 
+      <button class="dropdown-btn">Жанчивийн найман хүүхэд <span class="arrow"></span></button>
+      <div class="dropdown-container">
+         <p>Мондгойн Жанчив, Жамбын Хандхүү нарын төрүүлж өсгөсөн найман хүүхэд:</p>
+<ol>
+    <li>
+        <p>Ж. Пийцаа /эхнэр Ч. Намжидцэрэн/</p>
+    </li>
+    <li>
+        <p>Ж. Гэзэгт /нөхөр М. Аюур/</p>
+    </li>
+    <li>
+        <p>Ж. Цээцэг /нөхөр Д. Гүнбилэгт</p>
+    </li>
+    <li>
+        <p>Ж. Монхор /эхнэр Б. Бүрэнхүү/</p>
+    </li>
+    <li>
+        <p>Ж. Дамбаа /эхнэр Б. Сонинжаргал/</p>
+    </li>
+    <li>
+        <p>Ж. Отгол /нөхөр В. Мягмаржав/</p>
+    </li>
+    <li>
+        <p>Ж. Түвдэн /эхнэр Ш. Даваажаргал/</p>
+    </li>
+    <li>
+        <p>Ж. Батсайхан / нөхөр Ш. Зэвгээ/</p>
+    </li>
+</ol>
+<p>2022 оны Мондгойн удмынхан номонд тэмдэглэснээр өвөг Жанчивийн удмыг залгах хүү, охид, ач, зээ 232 хүн ахан дүүсийн холбоосоор гагнагдан амьдарч байна.&nbsp;</p>
+<p>Өвөг дээдсийн маань сайн сайхан зан үйлс цагаан мөр нь үр хүүхэд, ач зээ, нарт нь сүүн цагаан зам татуулах болтугай. Өвөг дээдэс, аав ээждээ сөгдөн мөргөмүй. &ndash; Ж. Дамбаа</p>
+      </div>
 
+      <button class="dropdown-btn">Том охин Ж. Гэзэгт <span class="arrow"></span></button>
+      <div class="dropdown-container">
+         <p>2023 оны ахан дүүсийн сар шинийн золголтыг зохион байгуулж буй бидний эмээ Жанчивын хоёр дахь хүүхэд Гэзэгт нь 1939 онд төрсөн бөгөөд бидний өвөө болох Монломын том хүү Аюуртай 1960 онд өрх бүл болон амьдарч эхэлсэн юм. Харин эмээ маань залуудаа буюу 1969 онд хорвоогийн мөнх бусыг үзүүлж өвөө М. Аюур маань үлдэж хүүхдүүдээ хүний зэрэгт хүргэсэн юм.&nbsp;</p>
+<p>Хайрт өвөө минь энэ насныхаа амьдралыг үр хүүхэддээ зориулж гурван хүүгээ ганцаараа өсгөхөөр барахгүй авга, НАГАЦ аль аль талтай холбоотой байлгаж, алсыг харж, ухаан зарж ирсний үр дүнд гурван хүү болох А. Батчулуун, А. Чинбат, А. Батнасан нарын үр хүүхдүүд, ач, зээ нар нь та бүхэнтэй учран золгож байна.&nbsp;</p>
+<p>Номын тэмдэглэлдээ өвөөгийн тухай дурьдсан нь:&nbsp;<a href="https://bit.ly/3E5cIri">https://bit.ly/3E5cIri</a>&nbsp;</p>
+      </div>
+   </div>
+   <center>
+    <a class="pdf-button" href="./Zurgiintsuglulga.pdf" target="_blank">
+      <span>Зураг үзэх</span></a>
+   </center>
+   <div class="sec" id="sec">
+      <h3>Уриалга</h3>
+      <p style="text-align: center;">&ldquo;Үзэсгэлэн болгогч&rdquo; хэмээх туулай жилийн цагаан сарын Жанчивийн найман хүүхэд-Ахан дүүсийн золголтонд хүрэлцэн ирсэн та бүхэн маань хоорондоо сайн танилцаж, бие биедээ тустай, холбоотой явахыг уриалж байна. </p>
+      <p style="text-align: center;">Бидний удам судар ариун тунгалаг байж, ураг төрөл маань мөнхжин батжиж, улам өнөр өтгөн болох болтугай.</p>
+   </div>
 
-
-   <script>
-      let stars = document.getElementById('stars');
-      let moon = document.getElementById('moon');
-      let uul = document.getElementById('uul');
-      let had = document.getElementById('had');
-      let btn =document.getElementById('btn');
-      let text= document.getElementById('text');
-      let header = document.querySelector('header');
-
-      window.addEventListener('scroll', function(){
-         let value = window.scrollY;
-         stars.style.left = value *0.25 +'px';
-         moon.style.top = value *1.05 +'px';
-         uul.style.top = value *0.5 +'px';
-         had.style.top = value *0 +'px';
-         text.style.marginRight = value * 4 + 'px';
-         header.style.top = value *0.5+'px';
-      })
-   </script>
+   <section>
+    <center id="text" class="word">
+        <p>Ахан дүүсийн <br> золголтонд тавтай морил</p>
+        <h3>Сар шинийн мэнд хүргэе</h2>
+         <img src="./Hadag.png" id="hadag" alt="">
+      </center>
+      <img src="./bird1.png" id="bird1" alt="">
+      <img src="./bird2.png" id="bird2" alt="">
+      <img src="./forest.png"  alt="">
+      <!-- <a href="#sec" id="btn">xplore</a> -->
+      <img src="./water.png" alt="" id="water">
+   </section id="sels">
+</divs
+   <audio autoplay>
+      <source src="./tsgansaray.mp3" type="audio/mpeg">
+   </audio>
+   
+   <script src="script-desktop.js" type="text/javascript" media="screen and (min-width: 768px)"></script>
+   <!-- <script src="script-mobile.js" type="text/javascript" media="screen and (max-width: 767px)"></script> -->
+ </head>
 </body>
 </html>
