--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    </head>
    <body style=" overflow-x: hidden;">
     <header id="header">
-        <h1 class="logo">Жанчивийн найман хүүхэд</h1>
+        <h1 class="logo">Жанчивийн найман хүүхэд :)</h1>
      </header>
       <div class="landing">
          <div class="clouds">
